--- a/dimas.conf
+++ b/dimas.conf
@@ -10,7 +10,7 @@ server {
 
     set $doc_root /app;
 
-    location /{'
+    location /{
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $doc_root/index.php;
         fastcgi_index index.php;
